fix: align worlds panel to left edge so it stays on screen

--- a/index.html
+++ b/index.html
@@ -305,8 +305,7 @@ body::after {
 #worlds-panel {
   position: absolute;
   bottom: calc(100% + 18px);
-  left: 50%;
-  transform: translateX(-50%);
+  left: 0;
   background: rgba(4, 3, 14, 0.97);
   border: 1px solid hsla(var(--clawd-hue), 28%, 22%, 0.65);
   box-shadow:
